[project]
name = "uma-exporter"
version = "0.2.3"
description = "Another umamusume exporter, cross-platform."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apsw-sqlite3mc>=3.51.2.0",
    "dearpygui>=2.2",
    "f3d>=3.4.1",
    "numpy>=2.4.2",
    "unitypy>=1.25.0",
]

[dependency-groups]
dev = [
    "cython>=3.2.4",
    "nuitka>=4.0.3",
    "setuptools>=82.0.0",
]
